# BitcoinDiamond

./: .gitignore  README.md  build.sh  runbuild.sh
ok-wallet/: CMakeLists.txt  README.md
ok-wallet/src/: CMakeLists.txt  app_wrapper.cpp  app_wrapper.h  com_okcoin_vault_jni_bitcoindiamond_BitcoinDiamondj.cpp  wallet.cpp
ok-wallet/test/src/: test_okwallet.cc
src/rpc/: rawtransaction.cpp
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp
